# chess

./: README.md  chess.cabal  stack.yaml
app/: Main.hs
src/: Chess.hs
src/Chess/: Board.hs  Move.hs  Position.hs  Rules.hs  Theory.hs
test/: Spec.hs
