name:                chess
version:             0.1.0.0
synopsis:            Game representation, search and evaluation.
description:         Please see README.md
homepage:            https://github.com/michaelmp/chess#readme
license:             AGPL
license-file:        LICENSE
author:              Michael Morris-Pearce
maintainer:          mikemp109@gmail.com
copyright:           2016 Michael Morris-Pearce
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chess, Chess.Board, Chess.Move, Chess.Position,
                       Chess.Rules, Chess.Theory
  build-depends:       base >= 4.7 && < 5
                     , text
                     , ansi-terminal
  default-language:    Haskell2010

test-suite chess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chess
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , QuickCheck
                     , containers >= 0.5.7.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaelmp/chess
